edit BasketContainer.js component

--- a/frontend/src/components/BasketContainer.css
+++ b/frontend/src/components/BasketContainer.css
@@ -3,9 +3,9 @@
   display: flex;
 }
 
-.basket-btn {
+.basket__btn {
   width: 30px;
-  width: 30px;
+  height: 100%;
   cursor: pointer;
   background: url('../assets/basket.svg') no-repeat center center;
   background-size: contain;
@@ -13,41 +13,72 @@
   transition: .5s;
 }
 
-.basket-btn:hover {
+.basket__btn:hover {
   opacity: .5;
 }
 
-.basket-content {
+.basket__content {
   display: none;
   position: absolute;
-  /* перенос строки */
-  overflow-wrap: break-word;
-  top: 38px;
-  right: -130px;
-  background-color: #f1f1f1;
+  top: 54px;
+  right: -160px;
+  background-color: #fff;
   border-radius: 10px;
-  width: 300px;
-  max-height: 360px;
-  box-shadow: 0px 8px 16px 0px rgba(197, 197, 197, 0.2);
+  width: 360px;
+  box-shadow: 0px 8px 16px 0px rgba(63, 63, 63, 0.8);
+  z-index: 2;
+  
+}
+
+.basket__arrow {
+  display: block;
+  position: absolute;
+  top: -7px;
+  right: calc(50% - 2px);
+  width: 14px;
+  height: 14px;
+  transform: rotate(45deg);
+  background-color: #fff;
   z-index: 1;
-  transition: .5s;
+}
+
+.basket__products {
+  max-height: 360px;
   overflow-y: scroll;
 }
 
-.basket-content::-webkit-scrollbar {
+.basket__products::-webkit-scrollbar {
   background-color: transparent;
   width: 5px;
 }
 
-.basket-content::-webkit-scrollbar-thumb {
+.basket__products::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background: linear-gradient(180deg, #6de06d, #286e00)
 }
 
-.basket-content::-webkit-scrollbar-track {
-  margin: 5px 0;
+.basket__products::-webkit-scrollbar-track {
+  margin: 5px 0 0 0;
   background-color: transparent;
   width: 5px;
 }
 
-.basket:hover .basket-content {display: block;}
+.basket:hover .basket__content {display: block;}
+
+.basket__footer {
+  padding: 6px 20px;
+  height: 60px;
+  background-color: rgb(247, 247, 247);
+  border-radius: 0 0 10px 10px;
+}
+
+/* repeating-linear-gradient(-45deg, #286e00, #286e00 15px, #6de06d 15px, #6de06d 30px); */
+
+.footer__description-price {
+  margin: 0;
+  font-size: 12px;
+}
+
+.footer__price {
+  margin: 0;
+}
