--- a/frontend/src/components/BasketItem.css
+++ b/frontend/src/components/BasketItem.css
@@ -1,13 +1,14 @@
 .product {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid rgba(141, 141, 141, 0.1); 
+  border-bottom: 1px solid rgba(141, 141, 141, 0.1);
 }
 
 .product__title {
   margin: auto;
   width: 100px;
   font-size: 12px;
+  z-index: 2;
 }
 
 .product__count {
