--- a/frontend/src/components/BasketItem.css
+++ b/frontend/src/components/BasketItem.css
@@ -1,7 +1,26 @@
 .product {
+  margin: 6px;
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid rgba(141, 141, 141, 0.1);
+}
+
+.product__delete-btn {
+  border: 1px solid rgb(224, 224, 224);
+  color: rgb(0, 0, 0);
+  margin-right: 5px;
+  width: 20px;
+  height: 20px;
+  align-self: center;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 0;
+  opacity: .3;
+  transition: .3s;
+}
+
+.product__delete-btn:hover {
+  opacity: 1;
 }
 
 .product__image {
