--- a/frontend/src/components/BasketContainer.css
+++ b/frontend/src/components/BasketContainer.css
@@ -13,11 +13,10 @@
 
 .basket__btn {
   width: 30px;
-  height: 100%;
+  height: 30px;
   cursor: pointer;
-  background: url('../assets/basket.svg') no-repeat center center;
-  background-size: contain;
   margin-right: 10px;
+  margin-top: 10px;
   transition: .5s;
 }
 
