--- a/frontend/src/components/BasketPageCard.css
+++ b/frontend/src/components/BasketPageCard.css
@@ -46,6 +46,12 @@
   color: rgb(173, 173, 173);
 }
 
+.basket-card__price {
+  font-size: 11px;
+  line-height: 13px;
+  color: rgb(173, 173, 173);
+}
+
 .basket-card__product-cost {
   width: 120px;
   display: flex;
@@ -93,7 +99,7 @@
   
 }
 
-.basket-card__price {
+.basket-card__total-price {
   margin: 0 0 15px 0;
 }
 
