--- a/frontend/src/pages/Basket.css
+++ b/frontend/src/pages/Basket.css
@@ -1,7 +1,7 @@
 .basket-page__container {
   display: flex;
-  justify-content: space-between;
-  width: 55%;
+  justify-content: space-around;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
@@ -24,5 +24,37 @@
 
 .basket-page__input {
   width: 80%;
-  margin: 20px auto 0;
+  height: 22px;
+  margin: 10px auto;
+}
+
+.basket-page__input:focus {
+  outline: 1px solid #198754;
+  color: #198754;
+}
+
+.basket-page__input:last-of-type {
+  margin-bottom: 20px;
+}
+
+.basket-page__input::placeholder {
+  font-size: 13px;
+  line-height: 14px;
+  color: #c2c2c2;
+}
+
+.basket-page__input-title {
+  width: 80%;
+  margin: 0 auto;
+  color: #5f5f5f;
+  font-size: 13px;
+  line-height: 14px;
+}
+
+.basket-page__input-title:first-of-type {
+  margin-top: 20px;
+}
+
+.basket-page__input_date::-webkit-calendar-picker-indicator {
+  cursor: pointer;
 }
