--- a/frontend/src/pages/Basket.css
+++ b/frontend/src/pages/Basket.css
@@ -9,6 +9,7 @@
   width: 280px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   border-radius: 4px;
   margin: 20px 0;
   box-shadow: 0px 0px 4px 0px rgba(63, 63, 63, 0.3);
@@ -53,6 +54,14 @@
 
 .basket-page__input-title:first-of-type {
   margin-top: 20px;
+}
+
+.basket-page__input_date::-webkit-datetime-edit-text,
+.basket-page__input_date::-webkit-datetime-edit-month-field,
+.basket-page__input_date::-webkit-datetime-edit-day-field,
+.basket-page__input_date::-webkit-datetime-edit-year-field
+{
+  color: #5f5f5f;
 }
 
 .basket-page__input_date::-webkit-calendar-picker-indicator {
