added clearBasket func to the ProductStore

--- a/frontend/src/components/ButtonWithCounter/ButtonWithCounter.css
+++ b/frontend/src/components/ButtonWithCounter/ButtonWithCounter.css
@@ -44,6 +44,11 @@
   width: 40px;
   font-size: 15px;
   line-height: 16px;
+
+}
+
+.button-counter__quantity::selection {
+  background: transparent;
 }
 
 .button-counter__add-btn {
