--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -39,6 +39,7 @@
 
 .navbar__auth-button_logout {
   margin-top: 15px;
+  margin-left: 40px;
   width: 24px;
   height: 24px;
   background-image: url('../../assets/logout.svg');
