add register error

--- a/frontend/src/components/modals/RegisterUser.css
+++ b/frontend/src/components/modals/RegisterUser.css
@@ -28,6 +28,10 @@
   color: #20c997;
 }
 
+.register-user__title_err {
+  color: #dc3545;
+}
+
 .register-user__close-btn {
   width: 40px;
   height: 40px;
