--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -12,11 +12,13 @@
   cursor: pointer;
   color: #46dd00;
   font-size: 15px;
-  line-height: 18px;
+  line-height: 15px;
   font-weight: 500;
   border: 1px solid #46dd00;
   border-radius: 4px;
   padding: 4px;
+  display: flex;
+  align-items: center;
 }
 
 .navbar__login:hover {
