--- a/frontend/src/components/modals/RegisterUser.css
+++ b/frontend/src/components/modals/RegisterUser.css
@@ -45,3 +45,33 @@
 .register-user__close-btn:hover {
   opacity: .7;
 }
+
+@media screen and (max-width: 525px) {
+  .register-user__container {
+    top: 40vh;
+    left: calc(50% - 150px);
+    width: 300px;
+    background-color: #212529;
+    z-index: 2;
+    border-radius: 12px;
+  }
+  .register-user__header {
+    padding: 20px 5px 20px 20px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .register-user__title {
+    font-size: 15px;
+    line-height: 15px;
+    color: #20c997;
+  }
+  .register-user__title_err {
+    color: #dc3545;
+  }
+  .register-user__close-btn {
+    width: 30px;
+    height: 30px;
+  }
+}
