add basket adaptive and bg

--- a/frontend/src/components/BasketContainer/BasketContainer.css
+++ b/frontend/src/components/BasketContainer/BasketContainer.css
@@ -1,6 +1,7 @@
 .basket-container {
   position: relative;
   display: flex;
+  margin-left: 20px;
 }
 
 .basket-container__empty {
@@ -15,9 +16,8 @@
   width: 30px;
   height: 30px;
   cursor: pointer;
-  margin-right: 10px;
-  margin-top: 10px;
-  transition: .5s;
+  transition: .3s;
+  margin: 10px;
 }
 
 .basket-container__btn:hover {
