--- a/frontend/src/pages/Favourites.css
+++ b/frontend/src/pages/Favourites.css
@@ -1,4 +1,4 @@
-.shop {
+.favourites {
   margin-top: 50px;
   display: flex;
   margin-left: 60px;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .shop {
+  .favourites {
     flex-direction: column;
     align-items: center;
     padding-top: 40px;
@@ -19,7 +19,7 @@
 }
 
 @media screen and (max-width: 525px) {
-  .shop {
+  .favourites {
     display: block;
     margin: 40px auto;
   }
