--- a/frontend/src/components/BasketPageCard/BasketPageCard.css
+++ b/frontend/src/components/BasketPageCard/BasketPageCard.css
@@ -7,6 +7,7 @@
   border: 1px solid rgb(224, 224, 224);
   border-radius: 4px;
   box-shadow: 0px 0px 2px 0px rgba(63, 63, 63, 0.3);
+  background-color: #fff;
 }
 
 .basket-card__image {
@@ -178,7 +179,7 @@
 
 @media screen and (max-width: 768px) {
   .basket-card {
-    max-width: 380px;
+    width: 380px;
     height: 132px;
   }
   .basket-card__image {
