--- a/frontend/src/components/Main.css
+++ b/frontend/src/components/Main.css
@@ -3,4 +3,5 @@
   min-height: 100vh;
   background-image: url('../assets/watermelon-bg.jpg');
   background-repeat: repeat;
+  background-color: #fff;
 }
