--- a/frontend/src/pages/Favourites.css
+++ b/frontend/src/pages/Favourites.css
@@ -4,6 +4,12 @@
   margin-left: 60px;
 }
 
+.favourites__wrapper {
+  display: flex;
+  width: 100%;
+  margin-right: 100px;
+}
+
 @media screen and (max-width: 1024px) {
   .shop {
 
