--- a/frontend/src/components/Main.css
+++ b/frontend/src/components/Main.css
@@ -1,7 +1,13 @@
+@import url('../fonts/fonts.css');
+
 .main {
   width: 100%;
   min-height: 100vh;
   background-image: url('../assets/watermelon-bg.jpg');
   background-repeat: repeat;
   background-color: #fff;
+  font-family: 'Inter', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
