--- a/frontend/src/pages/ProductPage.css
+++ b/frontend/src/pages/ProductPage.css
@@ -1,6 +1,11 @@
 .product__container {
   display: flex;
   margin-top: 50px;
+  padding: 20px 20px;
+  background-color: #fff;
+  border: 1px solid #e9e9e9;
+  box-shadow: 0px 0px 12px 3px rgb(184 184 184 / 50%);
+  border-radius: 20px;
 }
 
 @media screen and (max-width: 500px) {
