--- a/frontend/src/pages/ProductPage.css
+++ b/frontend/src/pages/ProductPage.css
@@ -1,6 +1,15 @@
-.product__container {
+.product-page {
+  width: 100%;
   display: flex;
+  justify-content: center;
+}
+
+.product-page__container {
+  position: relative;
+  width: 1024px;
   margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
   padding: 20px 20px;
   background-color: #fff;
   border: 1px solid #e9e9e9;
@@ -8,9 +17,160 @@
   border-radius: 20px;
 }
 
-@media screen and (max-width: 500px) {
-  .product__container {
-    flex-direction: column;
+.product-page__image {
+  width: 300px;
+  height: 300px;
+}
+
+.product-page__text-container {
+  width: 760px;
+}
+
+.product-page__title {
+  font-size: 32px;
+  line-height: 34px;
+  font-weight: 600;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #000;
+}
+
+.product-page__description {
+  margin-top: 20px;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+.product-page__like {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.product-page__like:hover {
+  transform: scale(1.1);
+}
+
+@media screen and (max-width: 1280px) {
+  .product-page__container {
+    width: 740px;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 20px;
+    background-color: #fff;
+    border: 1px solid #e9e9e9;
+    box-shadow: 0px 0px 12px 3px rgb(184 184 184 / 50%);
+    border-radius: 20px;
+  }
+  .product-page__image {
+    width: 240px;
+    height: 240px;
+  }
+  .product-page__text-container {
+    width: 400px;
+  }
+  .product-page__title {
+    font-size: 26px;
+    line-height: 28px;
+    padding-bottom: 2px;
+  }
+  .product-page__description {
+    margin-top: 10px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .product-page__container {
+    width: 600px;
+    margin-top: 40px;
+    padding: 20px 20px;
+    background-color: #fff;
+    border: 1px solid #e9e9e9;
+    box-shadow: 0px 0px 12px 3px rgb(184 184 184 / 50%);
+    border-radius: 20px;
+  }
+  .product-page__image {
+    width: 180px;
+    height: 180px;
+  }
+  .product-page__text-container {
+    width: 300px;
+  }
+  .product-page__title {
+    font-size: 23px;
+    line-height: 25px;
+    padding-bottom: 2px;
+  }
+  .product-page__description {
+    font-size: 15px;
+    line-height: 16px;
+  }
+  .product-page__like {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .product-page__container {
+    display: flex;
     align-items: center;
+    flex-direction: column;
+    width: 400px;
+    margin-top: 80px;
+    padding: 10px 20px;
+  }
+  .product-page__image {
+    width: 280px;
+    height: 280px;
+  }
+  .product-page__text-container {
+    width: 300px;
+  }
+  .product-page__title {
+    font-size: 18px;
+    line-height: 19px;
+    padding-bottom: 2px;
+  }
+  .product-page__description {
+    margin-top: 0;
+    font-size: 15px;
+    line-height: 16px;
+  }
+  .product-page__like {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .product-page__container {
+    width: 280px;
+  }
+  .product-page__image {
+    width: 200px;
+    height: 200px;
+  }
+  .product-page__text-container {
+    width: 220px;
+  }
+  .product-page__title {
+    font-size: 18px;
+    line-height: 19px;
+    padding-bottom: 2px;
+  }
+  .product-page__description {
+    margin-top: 0;
+    font-size: 15px;
+    line-height: 16px;
+  }
+  .product-page__like {
+    width: 20px;
+    height: 20px;
   }
 }
