--- a/frontend/src/pages/Basket/Basket.css
+++ b/frontend/src/pages/Basket/Basket.css
@@ -26,7 +26,7 @@
 }
 
 .basket-page__input {
-  width: 80%;
+  width: 224px;
   height: 30px;
   margin: 2px auto 14px;
   padding: 8px;
@@ -51,7 +51,7 @@
 }
 
 .basket-page__input-subtitle {
-  width: 80%;
+  width: 224px;
   margin: 0 auto;
   color: #5f5f5f;
   font-size: 13px;
@@ -91,6 +91,12 @@
     width: 240px;
     margin-left: 50px;
   }
+  .basket-page__input {
+    width: 192px;
+  }
+  .basket-page__input-subtitle {
+    width: 192px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -103,6 +109,12 @@
     width: 380px;
     margin: 20px auto;
   }
+  .basket-page__input {
+    width: 300px;
+  }
+  .basket-page__input-subtitle {
+    width: 300px;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -113,5 +125,11 @@
   .basket-page__sidebar {
     width: 300px;
     margin: 20px auto;
+  }
+  .basket-page__input {
+    width: 240px;
+  }
+  .basket-page__input-subtitle {
+    width: 240px;
   }
 }
