--- a/frontend/src/components/ButtonWithCounter/ButtonWithCounter.css
+++ b/frontend/src/components/ButtonWithCounter/ButtonWithCounter.css
@@ -1,10 +1,11 @@
 .button-counter {
-  width: 190px;
+  width: 200px;
   height: 30px;
   cursor: pointer;
   box-sizing: border-box;
   text-align: center;
   background-color: #fff;
+  margin-bottom: 12px;
 }
 
 .button-counter__quantity-wrapper {
@@ -15,16 +16,17 @@
   cursor: auto;
   margin: 0;
   padding: 0;
-  border: 1px solid #198754;
+  border: 1px solid #9acd32;
   background-color: #fff;
-  border-radius: 3px;
+  border-radius: 4px;
+  color: #729727;
 }
 
 .button-counter__count-btn {
   border: none;
   background-color: rgba(173, 173, 173, 0.1);
   border-radius: 4px;
-  color: rgb(0, 0, 0);
+  color: #9acd32;
   width: 36px;
   height: 26px;
   text-align: center;
@@ -56,18 +58,22 @@
 .button-counter__add-btn {
   width: 100%;
   height: 30px;
-  background-color: #198754;
-  border-radius: 3px;
+  background-color: #99ca74;
+  border-radius: 4px;
   color: #fff;
-  font-size: 16px;
-  font-weight: 500;
-  transition: .5s;
+  font-size: 15px;
+  line-height: 15px;
+  font-weight: 600;
+  transition: .4s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .button-counter__add-btn:hover {
   background-color: #fff;
-  color: #198754;
-  border: 1px solid #198754;
+  color: #99ca74;
+  border: 1px solid #99ca74;
 }
 
 @media screen and (max-width: 525px) {
