--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -6,17 +6,16 @@
 }
 
 .footer__link {
-  padding: 6px;
-  font-size: 16px;
-  line-height: 16px;
-  font-weight: 500;
-  text-decoration: none;
-  color: #fff;
-  background-color: #212529;
-  border-radius: 4px;
-  margin-right: 10px;
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 20px;
+  height: 20px;
+  opacity: .3;
+  transition: .3s;
 }
 
 .footer__link:hover {
-  color: rgba(255, 255, 255, 0.5);
+  color: #fff;
+  opacity: 1;
 }
