--- a/frontend/src/components/ProductList.css
+++ b/frontend/src/components/ProductList.css
@@ -1,15 +1,16 @@
 .product-list {
-  max-width: 1200px;
+  max-width: 1300px;
   margin: 0;
   padding-left: 60px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 190px);
-  gap: 20px 40px;
+  grid-template-columns: repeat(auto-fill, 230px);
+  gap: 20px 20px;
 }
 
-@media screen and (max-width: 1600px) {
+@media screen and (max-width: 1620px) {
   .product-list {
-    max-width: 1000px;
+    max-width: 1040px;
+    padding-left: 40px;
   }
 }
 
